--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8080
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=xxx
+spring.datasource.password=xxx
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
