--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 }
 
 dependencies {
+	implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
+	implementation 'com.amazonaws:aws-java-sdk-s3'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	runtimeOnly 'mysql:mysql-connector-java'
